--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,7 @@ body {
     height: 500px;
   }
 
+
   .img-overlap .img-2 {
     display: none;
   }
@@ -1604,6 +1605,18 @@ body {
 }
 
 @media (max-width: 575px) {
+
+  .modal-dialog { max-width: none; }
+  .modal-dialog {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .modal-content {
+    height: 99%;
+  }
   
   .modal-header h5 {
     position: relative;
