--- a/css/main.css
+++ b/css/main.css
@@ -1609,9 +1609,9 @@ body {
   .modal-dialog { max-width: none; }
   .modal-dialog {
     width: 100%;
-    height: 100%;
+    height: 80%;
     padding: 0;
-    margin: 0;
+    margin-top: 0;
   }
   
   .modal-content {
