--- a/css/main.css
+++ b/css/main.css
@@ -351,7 +351,7 @@ body {
     margin: 10px;
   }
   .yostar{
-    border-bottom: 0.5px solid brown; 
+    border-bottom: 0.5px solid brown;
     /* border-left: 1px solid brown; 
     border-right: 1px solid brown;   */
   }
@@ -1609,13 +1609,15 @@ body {
   .modal-dialog { max-width: none; }
   .modal-dialog {
     width: 100%;
-    height: 80%;
+    height: 100%;
     padding: 0;
     margin-top: 0;
+    right: 9px;
+    top: -1px;
   }
   
   .modal-content {
-    height: 99%;
+    height: 100%;
   }
   
   .modal-header h5 {
