--- a/css/main.css
+++ b/css/main.css
@@ -35,15 +35,32 @@ body {
   .firsthead {
     display: none;
   }
+  
 }
+
+
 
 @media (max-width: 575px) {
   .img-overlap {
     height: 500px;
   }
 
+  .img-overlap .img-3{
+    display: flex;
+    position: absolute;
+    height: 500px;
+    width: 350px;
+    margin-top: 20px;
+    
+  }
 
-  .img-overlap .img-2 {
+  
+
+  .img-overlap .img-1{
+    display: none;
+  }
+  
+  .img-overlap .img-2  {
     display: none;
   }
 
@@ -92,7 +109,7 @@ body {
 
 .colfashionimgcontent {
   background-color: white;
-  background-image: url(../media/3.JPG);
+  background-image: url(../media/3.jpg);
   background-size: contain;
   top: 70px;
   background-position: center;
@@ -107,12 +124,14 @@ body {
     margin: 100px 100px;
     background-size: contain;
   }
+  
 }
 
 @media screen and (max-width: 768px) {
   .colfashionimgcontent {
     display: none;
   }
+  
 }
 
 
@@ -299,6 +318,7 @@ body {
   .block__62849 .block__16443:hover {
     top: 0;
   }
+  
 }
 
 .block__62849 .block__16443:hover .custom-icon {
@@ -411,6 +431,7 @@ body {
     left: 250px;
   }
 }
+
 
 
 .img-overlap .img-1,
@@ -947,6 +968,7 @@ body {
     max-width: 100%;
     height: auto;
   }
+  
 }
 
 @media (min-width: 1281px) {
@@ -957,6 +979,9 @@ body {
     top: 120px;
     left: 100px;
   }
+  
+
+
 
   .stratend {
     background-size: 780px;
@@ -984,6 +1009,8 @@ body {
   .home_banner_area .banner_inner .home_right_img {
     display: none;
   }
+  
+
 }
 
 .home_banner_area .banner_inner .col-lg-7 {
