--- a/css/main.css
+++ b/css/main.css
@@ -6,9 +6,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Source+Sans+Pro&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Unica+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Unica+One&display=swap");
 
 html,
 body {
@@ -42,9 +42,8 @@ body {
     height: 500px;
   }
 
-  .img-overlap{
+  .img-overlap {
     height: 450px;
-    
   }
 
   .img-overlap .img-2 {
@@ -55,22 +54,17 @@ body {
     display: none;
   }
 
-
   .templateux-navbar .site-logo a {
     font-size: 28px;
     color: #000;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     text-decoration: none;
     font-weight: bolder;
     position: relative;
     /* left: 5%; */
     letter-spacing: 8px;
   }
-
-
-
 }
-
 
 .pgsubtitle {
   font-family: sans-serif;
@@ -119,7 +113,6 @@ body {
   }
 }
 
-
 .tellme {
   position: relative;
   top: 40px;
@@ -130,13 +123,10 @@ body {
 }
 
 @media screen and (max-width: 575px) {
-  #whomeis{
+  #whomeis {
     display: none;
   }
 }
-
-
-
 
 #shop-fashion {
   padding: 10px 60px;
@@ -309,7 +299,12 @@ body {
   background: transparent;
 }
 
-.block__62849 .block__16443:hover .custom-icon .block__62849 .block__16443:hover .custom-icon {
+.block__62849
+  .block__16443:hover
+  .custom-icon
+  .block__62849
+  .block__16443:hover
+  .custom-icon {
   color: #007bff;
 }
 
@@ -323,8 +318,6 @@ body {
 /* END END END END END skills that i have */
 
 /* number counter */
-
-
 
 .block__19738 {
   width: 100%;
@@ -354,18 +347,12 @@ body {
     /* padding-top: 0px; */
     margin: 10px;
   }
-  .yostar{
+  .yostar {
     border-bottom: 0.5px solid brown;
     /* border-left: 1px solid brown; 
     border-right: 1px solid brown;   */
   }
-
-
 }
-
-
-
-
 
 /* baro */
 
@@ -394,7 +381,6 @@ body {
   /* background-size: contain; */
 }
 
-
 @media (min-width: 1281px) {
   .firstlast {
     background-image: url(../media/standing.svg);
@@ -416,7 +402,6 @@ body {
   }
 }
 
-
 .img-overlap .img-1,
 .img-overlap .img-2 {
   position: absolute;
@@ -425,7 +410,6 @@ body {
 }
 
 @media (max-width: 991.98px) {
-
   .img-overlap .img-1,
   .img-overlap .img-2 {
     padding: 10%;
@@ -467,8 +451,6 @@ body {
   color: #ced4da;
 }
 
-
-
 /* work experience */
 
 .color-expo {
@@ -500,7 +482,6 @@ body {
   .colorsign {
     margin-left: 10px;
   }
-
 }
 
 .heading-meta {
@@ -511,7 +492,7 @@ body {
   color: #999999;
   font-weight: 500;
   letter-spacing: 2px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 .color-heado {
@@ -522,7 +503,7 @@ body {
   letter-spacing: 2px;
   /* line-height: 1; */
   position: relative;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 .color-heado span {
@@ -606,27 +587,45 @@ body {
   top: -1px;
 }
 
-.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-1 {
+.timeline-centered
+  .timeline-entry
+  .timeline-entry-inner
+  .timeline-icon.color-1 {
   color: #fff;
 }
 
-.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-2 {
+.timeline-centered
+  .timeline-entry
+  .timeline-entry-inner
+  .timeline-icon.color-2 {
   background: #ec5453;
 }
 
-.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-3 {
+.timeline-centered
+  .timeline-entry
+  .timeline-entry-inner
+  .timeline-icon.color-3 {
   background: #f9bf3f;
 }
 
-.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-4 {
+.timeline-centered
+  .timeline-entry
+  .timeline-entry-inner
+  .timeline-icon.color-4 {
   background: #a84cb8;
 }
 
-.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-5 {
+.timeline-centered
+  .timeline-entry
+  .timeline-entry-inner
+  .timeline-icon.color-5 {
   background: #2fa499;
 }
 
-.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-none {
+.timeline-centered
+  .timeline-entry
+  .timeline-entry-inner
+  .timeline-icon.color-none {
   background: #fff;
   width: 20px;
   height: 20px;
@@ -663,7 +662,7 @@ body {
   margin-left: -9px;
 }
 
-.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label p+p {
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label p + p {
   margin-top: 15px;
 }
 
@@ -677,7 +676,12 @@ body {
   color: #000;
 }
 
-.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2 span {
+.timeline-centered
+  .timeline-entry
+  .timeline-entry-inner
+  .timeline-label
+  h2
+  span {
   -webkit-opacity: 0.4;
   -moz-opacity: 0.4;
   opacity: 0.4;
@@ -695,12 +699,10 @@ body {
   width: 100%;
   padding: 35px 0;
   z-index: 99999;
-
 }
 
 .templateux-navbar .container-fluid {
   max-width: 100%;
-
 }
 
 .templateux-navbar .toggle-menu {
@@ -732,7 +734,7 @@ body {
 .templateux-navbar .site-logo a {
   font-size: 28px;
   color: #000;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   text-decoration: none;
 }
 
@@ -747,8 +749,6 @@ body {
 
 .templateux-navbar .templateux-menu ul li {
   display: inline-block;
-
-
 }
 
 .templateux-navbar .templateux-menu ul li a {
@@ -768,19 +768,14 @@ body {
     font-size: 18px;
     font-weight: 200;
     padding: 0px 15px;
-
   }
 
   .templateux-navbar .site-logo a {
     font-size: 28px;
     font-weight: bolder;
     letter-spacing: 6px;
-
   }
-
 }
-
-
 
 .templateux-navbar .templateux-menu ul li a:before {
   content: "";
@@ -799,7 +794,7 @@ body {
   width: 100%;
 }
 
-.templateux-navbar .templateux-menu ul li.active>a:before {
+.templateux-navbar .templateux-menu ul li.active > a:before {
   width: 100%;
 }
 
@@ -849,7 +844,6 @@ body {
 
 .templateux-navbar.navbar-light .site-logo a {
   color: #fff;
-
 }
 
 .templateux-navbar.navbar-light .hamburger .hamburger-inner,
@@ -915,7 +909,6 @@ body {
   }
 }
 
-
 /* Home Banner Area css
 ============================================================================================ */
 .home_banner_area {
@@ -969,7 +962,6 @@ body {
     background-position-y: 200px;
     padding-bottom: 650px;
     /* background-size: cover; */
-
   }
 
   .home_banner_area {
@@ -980,9 +972,7 @@ body {
   .firsthead {
     left: 200px;
   }
-
 }
-
 
 @media (max-width: 991px) {
   .home_banner_area .banner_inner .home_right_img {
@@ -1012,7 +1002,7 @@ body {
 }
 
 .home_banner_area .banner_inner .banner_content h3:after {
-  content: '';
+  content: "";
   width: 410px;
   height: 2px;
   position: absolute;
@@ -1149,11 +1139,7 @@ body {
 /* End Home Banner Area css
 ============================================================================================ */
 
-
-
 /* services */
-
-
 
 @media (min-width: 768px) {
   .site-section {
@@ -1197,7 +1183,7 @@ body {
 .section-title .sub-title {
   font-size: 1rem;
   text-transform: uppercase;
-  letter-spacing: .2rem;
+  letter-spacing: 0.2rem;
   font-weight: 400;
   color: #b3b3b3;
 }
@@ -1211,9 +1197,9 @@ body {
   background: #fff;
   border: 1px solid #eee;
   border-top: 2px solid #007bff;
-  -webkit-transition: .3s all ease-in-out;
-  -o-transition: .3s all ease-in-out;
-  transition: .3s all ease-in-out;
+  -webkit-transition: 0.3s all ease-in-out;
+  -o-transition: 0.3s all ease-in-out;
+  transition: 0.3s all ease-in-out;
   position: relative;
   top: 0;
 }
@@ -1240,7 +1226,6 @@ body {
   color: #999999;
   font-size: 1rem;
 }
-
 
 /* contact us */
 
@@ -1271,7 +1256,6 @@ body {
   }
 }
 
-
 .addo {
   background-image: url(../media/address.svg);
   background-size: contain;
@@ -1281,18 +1265,14 @@ body {
   background-color: whitesmoke;
 }
 
-
-
 /* footer */
 
 .footraw {
   background-color: rgb(255, 255, 255);
   height: 150px;
   width: 100%;
-  border-top: 0.5px solid #63ABFF;
+  border-top: 0.5px solid #63abff;
   margin-bottom: 40px;
-
-
 }
 
 #footstyling {
@@ -1318,13 +1298,10 @@ body {
 
 .footer-foot ul li i {
   margin-right: 20px;
-  
-
 }
-.checkout1{
-  
+.checkout1 {
   color: white;
-  background-color: #15A4FB;
+  background-color: #15a4fb;
   border-radius: 50%;
   padding: 8px;
   -webkit-transform: perspective(1px) translateZ(0);
@@ -1332,9 +1309,8 @@ body {
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
   -webkit-transition-duration: 0.5s;
   transition-duration: 0.5s;
-
 }
-.fustyle{
+.fustyle {
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
@@ -1344,34 +1320,29 @@ body {
 
 .fustyle:hover,
 .fustyle:focus,
-.fustyle:active{
+.fustyle:active {
   -webkit-transform: scale(0.8);
   transform: scale(0.8);
   -webkit-transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
   transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
-
 }
-.checkout2{
+.checkout2 {
   color: white;
-  background-color: #1DA1F2;
+  background-color: #1da1f2;
   border-radius: 50%;
   padding: 8px;
-
 }
-.checkout3{
+.checkout3 {
   color: white;
-  background-color: #0092BB;
+  background-color: #0092bb;
   border-radius: 50%;
   padding: 8px;
-
 }
-.checkout4{
+.checkout4 {
   color: white;
-  background-color: #ED4956;
+  background-color: #ed4956;
   border-radius: 50%;
   padding: 8px;
-
-
 }
 
 .addfoot {
@@ -1379,11 +1350,7 @@ body {
   /* padding: 10px; */
 }
 
-
-
-
 /* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
-
 
 .totli {
   margin: 20px 0px;
@@ -1411,7 +1378,6 @@ body {
 
 .timeline {
   position: relative;
-
 }
 
 .timeline .timeline-container {
@@ -1420,49 +1386,42 @@ body {
   position: relative;
   background-color: inherit;
   width: 100%;
-
 }
 
 .timeline .timeline-container:last-of-type {
   margin-bottom: 0;
 }
 
-
 /* #FFF */
 .timeline.edu .timeline-container::after {
   content: "\f007";
-  background: #FFF;
+  background: #fff;
   font-family: "Font Awesome\ 5 Free";
   font-size: 24px;
-  color: #FF4C60;
+  color: #ff4c60;
   position: absolute;
   left: -7px;
   top: 0;
   z-index: 1;
-
 }
 
 .timeline.exp .timeline-container::after {
   content: "\f007";
-  background: #FFF;
+  background: #fff;
   font-family: "Font Awesome\ 5 Free";
   font-size: 24px;
-  color: #FF4C60;
+  color: #ff4c60;
   position: absolute;
   left: -7px;
   top: 0;
   z-index: 1;
-
-
 }
 
 @media screen and (max-width: 768px) {
   .timeline.exp {
     margin-top: 40px;
   }
-
 }
-
 
 .myRole {
   font-weight: bold;
@@ -1477,7 +1436,7 @@ body {
 }
 
 .timeline .content .time {
-  color: #8B88B1;
+  color: #8b88b1;
   font-size: 14px;
 }
 
@@ -1493,7 +1452,7 @@ body {
 .timeline span.line {
   position: absolute;
   width: 1px;
-  background-color: #FF4C60;
+  background-color: #ff4c60;
   top: 30px;
   bottom: 30px;
   left: 34px;
@@ -1504,14 +1463,13 @@ body {
 }
 
 .bg-whitee {
-  background: #FFF;
+  background: #fff;
 }
 
 .shadow-dark {
   -webkit-box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
   -moz-box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
   box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
-
 }
 
 .padding-30 {
@@ -1543,14 +1501,7 @@ body {
   text-decoration: none;
 }
 
-
-
-
-
-
-
 /* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
-
 
 /* ++++++++++++++++++++++MODAL FORMATTING+++++++++++++++++++++++++++++++++++++ */
 /* #131111 */
@@ -1565,11 +1516,10 @@ body {
   color: white;
 }
 
-
 .modal-header h5 {
   position: relative;
   left: 16%;
-  font-family: 'Unica One', cursive;
+  font-family: "Unica One", cursive;
   font-size: 30px;
   letter-spacing: 6px;
   font-weight: bold;
@@ -1591,7 +1541,6 @@ body {
 .list-unstyled p {
   text-transform: initial;
   font-family: "Roboto Condensed", sans-serif;
-  ;
 }
 
 .modal-btn {
@@ -1609,7 +1558,6 @@ body {
 }
 
 @media (max-width: 575px) {
-
   .modal-btn {
     position: relative;
     right: 35%;
@@ -1628,8 +1576,9 @@ body {
     transition: 0.3s all ease; */
   }
 
-
-  .modal-dialog { max-width: none; }
+  .modal-dialog {
+    max-width: none;
+  }
   .modal-dialog {
     width: 100%;
     height: 100%;
@@ -1638,29 +1587,29 @@ body {
     right: 9px;
     top: -1px;
   }
-  
+
   .modal-content {
     height: 100%;
   }
-  
+
   .modal-header h5 {
     position: relative;
     left: 0px;
-    font-family: 'Unica One', cursive;
+    font-family: "Unica One", cursive;
     font-size: 30px;
     letter-spacing: 6px;
     font-weight: bold;
     color: rgb(5, 5, 121);
   }
 
-  #experience{
+  #experience {
     padding-left: 15px;
   }
-  #experiencee{
+  #experiencee {
     padding-left: 15px;
   }
 
-  .site-section{
+  .site-section {
     margin-left: 15px;
   }
 }
@@ -1691,7 +1640,7 @@ label {
   line-height: 1em;
   text-transform: uppercase;
   color: black;
-  transition: all .3s ease-in;
+  transition: all 0.3s ease-in;
   opacity: 0;
   font-weight: lighter;
   cursor: pointer;
@@ -1700,12 +1649,12 @@ label {
 .inner:before,
 .inner:after {
   position: absolute;
-  content: '';
+  content: "";
   height: 1px;
   width: inherit;
-  background: #FFC107;
+  background: #ffc107;
   left: 0;
-  transition: all .3s ease-in;
+  transition: all 0.3s ease-in;
   text-decoration: none;
   border: none;
 }
@@ -1752,7 +1701,7 @@ label {
 /* =================TECH USED ===================== */
 /* rgba(19, 18, 18, 0.925) */
 
-.flex-item.full>.text {
+.flex-item.full > .text {
   max-width: 700px;
   padding: 20px 0 30px;
 }
@@ -1768,13 +1717,11 @@ label {
   color: white;
 }
 
-
 /* =================TECH USED END===================== */
-
 
 /* +++++++++++++++++++++++++MODAL FORMATTING END++++++++++++++++++++++++++++++++++ */
 
-.profileyo{
+.profileyo {
   width: 60px;
   height: 60px;
   border-radius: 50%;
@@ -1782,10 +1729,118 @@ label {
   background-size: contain;
 }
 
+/* 88888888888888888888 */
+
+.videoBG {
+  width: 100%;
+  margin: 0;
+  height: 500px;
+  border-radius: 0px;
+}
+
+#gobtn-flip {
+  margin: 30px 0px 60px 0px;
+}
+/* #E9EEF3 */
+.button-flip {
+  padding: 10px 50px;
+  background: #8F826F;
+  color: white;
+  border: 2.5px solid #583C21;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+  border-radius: 2px;
+}
+
+.button-flip:hover,
+.button-flip:active,
+.button-flip:focus {
+  -webkit-transition: 500ms;
+  transition: 500ms;
+  background: transparent;
+  color: black;
+  border: 1px black dotted;
+  text-decoration: none;
+}
 
 
 
+.pro-flip {
+  position: absolute;
+  top: 400px;
+  color: darkgrey;
+  font-family: "Nunito", sans-serif;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
 
+@media (max-width: 700px) {
+  .pro-flip {
+    position: absolute;
+    top: 390px;
+    color: darkgrey;
+    font-family: "Nunito", sans-serif;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+  }
+  .button-flip {
+    padding: 10px 100px;
+    background: black;
+    color: white;
+    border: 2.5px solid black;
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+    border-radius: 2px;
+  }
+}
 
+.pro-flipkart {
+  position: absolute;
+  top: 10px;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  font-family: "Segoe UI", Roboto;
+}
 
+#header-flip {
+  font-size: 55px;
+  font-weight: 500;
+  letter-spacing: 10px;
+  line-height: 48px;
+  text-align: center;
+  text-transform: uppercase;
+}
 
+@media (max-width: 700px) {
+
+  .pro-flipkart {
+    position: absolute;
+    top: 130px;
+    color: white;
+    text-align: center;
+    font-family: "Segoe UI", Roboto;
+  }
+  #header-flip {
+    font-size: 30px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    /* line-height: 10px; */
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .videoBG {
+    border-radius: 10px;
+  }
+}
+
+/* 8888888888888888888888 */
