--- a/css/main.css
+++ b/css/main.css
@@ -1746,7 +1746,7 @@ label {
   padding: 10px 50px;
   background: transparent;
   color: white;
-  border: 2.5px solid #583C21;
+  border: 2.5px solid #583c21;
   font-size: 20px;
   font-weight: 600;
   text-decoration: none;
@@ -1764,11 +1764,9 @@ label {
   text-decoration: none;
 }
 
-
-
 .pro-flip {
   position: absolute;
-  top: 400px;
+  top: 360px;
   color: darkgrey;
   font-family: "Nunito", sans-serif;
   text-align: center;
@@ -1779,7 +1777,7 @@ label {
 @media (max-width: 700px) {
   .pro-flip {
     position: absolute;
-    top: 390px;
+    top: 400px;
     color: darkgrey;
     font-family: "Nunito", sans-serif;
     text-align: center;
@@ -1787,7 +1785,7 @@ label {
     height: 100%;
   }
   .button-flip {
-    padding: 10px 100px;
+    padding: 5px 100px;
     background: black;
     color: white;
     border: 2.5px solid black;
@@ -1801,7 +1799,8 @@ label {
 .pro-flipkart {
   position: absolute;
   top: 10px;
-  color: rgb(255, 255, 255);
+  right: -170px;
+  color: white;
   text-align: center;
   width: 100%;
   height: 100%;
@@ -1810,28 +1809,52 @@ label {
 
 #header-flip {
   font-size: 55px;
-  font-weight: 500;
-  letter-spacing: 10px;
+  font-weight: 300;
+  letter-spacing: 20px;
   line-height: 48px;
   text-align: center;
+  /* border: 2px solid black; */
+  width: 800px;
+  padding: 20px 0;
+  margin: 0;
   text-transform: uppercase;
+  background: #616161; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #9bc5c3d0,
+    #616161b2
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #9bc5c362,
+    #61616154
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+#flip-mini {
+  background: rgba(0, 0, 0, 0.658); /* fallback for old browsers */
+
+  color: white;
 }
 
 @media (max-width: 700px) {
-
   .pro-flipkart {
     position: absolute;
-    top: 130px;
+    top: 115px;
+    right: -50px;
     color: white;
     text-align: center;
     font-family: "Segoe UI", Roboto;
+    width: 550px;
   }
   #header-flip {
     font-size: 30px;
-    font-weight: 500;
+    font-weight: 300;
     letter-spacing: 2px;
     /* line-height: 10px; */
     color: white;
+    width: 450px;
+    padding: 3px 0;
     text-align: center;
     text-transform: uppercase;
   }
